syntax = "proto3";
option go_package = "github.com/its-a-feature/tiger/grpc/services";
package translationContainerServices;


service TranslationContainer {
  // rpc function(messageFromClient) messageToClient
  // all of these functions start off by sending messageToClient and getting the result back
  rpc TranslateFromCustomTotigerFormat (stream TrCustomMessageTotigerC2FormatMessageResponse) returns (stream TrCustomMessageTotigerC2FormatMessage) {}
  rpc TranslateFromtigerToCustomFormat (stream TrtigerC2ToCustomMessageFormatMessageResponse) returns (stream TrtigerC2ToCustomMessageFormatMessage) {}
  rpc GenerateEncryptionKeys (stream TrGenerateEncryptionKeysMessageResponse) returns (stream TrGenerateEncryptionKeysMessage) {}

}

message TrCustomMessageTotigerC2FormatMessage {
  string                    TranslationContainerName = 1;
  string                    C2Name = 2;
  bytes                     Message = 3;
  string                    UUID = 4;
  bool                      tigerEncrypts = 5;
  repeated CryptoKeysFormat CryptoKeys = 6;
}
message CryptoKeysFormat {
  bytes  EncKey   = 1;
  bytes  DecKey   = 2;
  string Value    = 3;
}
message TrCustomMessageTotigerC2FormatMessageResponse  {
bool Success  =1;
string    Error   =2;
bytes Message = 3;
  string                    TranslationContainerName = 4;
}

message TrtigerC2ToCustomMessageFormatMessage {
string TranslationContainerName =1;
string    C2Name =2;
bytes    Message = 3;
string    UUID        =4;
bool    tigerEncrypts =5;
repeated CryptoKeysFormat    CryptoKeys   =6;
}
message TrtigerC2ToCustomMessageFormatMessageResponse {
bool Success  =1;
string    Error   =2;
bytes    Message =3;
  string                    TranslationContainerName = 4;
}

message TrGenerateEncryptionKeysMessage {
string TranslationContainerName =1;
string    C2Name    =2;
string    CryptoParamValue   =3;
string    CryptoParamName    =4;
}
message TrGenerateEncryptionKeysMessageResponse  {
bool Success  =1;
string    Error    =2;
bytes    EncryptionKey =3;
bytes    DecryptionKey =4;
  string                    TranslationContainerName = 5;
}